# aoc2022

./: .gitignore  README.md  pyproject.toml
aoc/: __init__.py  actions.py  bureaucrat.py  cli.py  fetch.py  parsers.py
aoc2022/: __init__.py  cli.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  solution_template.py  translations.py
tests/: test_day1.py  test_day10.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
